Refectoritzant la pàgina web

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       <div class="project-card">
         <a href="https://tubert.nauvi.cat/" target="_blank" class="project-link">
-          <img src="assets/Logo_StudyTimer.svg" alt="Logo TaskTimer" class="project-logo">
+          <img src="assets/logo_transparent_tubert_optimized.png" alt="Logo TaskTimer" class="project-logo">
           <div class="project-info">
             <h3>Taller Tubert</h3>
             <p>Modernització i Augment de la Presència Digital</p>
